--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -5,7 +5,7 @@ project.layout.footer.technical                                                 
 project.layout.footer.contact                                                   = Kontakt
 browse.documents                                                                = Dokumente
 project.complex.title                                                           = Erweiterte Suche
-project.form.label.fiv_subject                                                  = FIV Notation
+project.form.label.fiv_subject                                                  = FIV Themen
 project.help.fiv_subject                                                        = Schlagwortvergabe nach dem Thesaurus des FIV 
 project.simple.title                                                            = Einfache Suche
 editor.search.mir.language_classification                                       = Sprache
