add i18n for display fiv_subject to detail view

--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -13,3 +13,4 @@ editor.search.mir.pressarchive_classification                                   
 editor.search.mir.pressarchive_classification.tooltip                           = Klassifikation des dfi-Pressearchivs
 editor.search.mir.press_organ                                                   = Presseorgan
 editor.search.mir.press_organ.tooltip                                           = Liste der Presseorgane
+component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
