--- a/src/main/resources/config/reposis_dfi/messages_en.properties
+++ b/src/main/resources/config/reposis_dfi/messages_en.properties
@@ -13,3 +13,4 @@ editor.search.mir.pressarchive_classification                                   
 editor.search.mir.pressarchive_classification.tooltip                           = Classification of the Dfi press archive
 editor.search.mir.press_organ                                                   = Press organ
 editor.search.mir.press_organ.tooltip                                           = List of press organs
+component.mods.metaData.dictionary.FIVSubject                                   = FIV-Subject
