--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -5,7 +5,9 @@ project.layout.footer.technical                                                 
 project.layout.footer.contact                                                   = Kontakt
 browse.documents                                                                = Dokumente
 project.complex.title                                                           = Erweiterte Suche
+project.form.label.fiv_aspect                                                   = FIV Aspekte
 project.form.label.fiv_subject                                                  = FIV Themen
+project.help.fiv_aspect                                                         = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
 project.help.fiv_subject                                                        = Schlagwortvergabe nach dem Thesaurus des FIV 
 project.simple.title                                                            = Einfache Suche
 editor.search.mir.language_classification                                       = Sprache
@@ -15,4 +17,6 @@ editor.search.mir.pressarchive_classification                                   
 editor.search.mir.pressarchive_classification.tooltip                           = Klassifikation des dfi-Pressearchivs
 editor.search.mir.press_organ                                                   = Presseorgan
 editor.search.mir.press_organ.tooltip                                           = Liste der Presseorgane
+component.mods.metaData.dictionary.FIVAspect                                    = FIV-Aspekte
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
+
