--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -6,8 +6,10 @@ project.layout.footer.contact                                                   
 browse.documents                                                                = Dokumente
 project.complex.title                                                           = Erweiterte Suche
 project.form.label.fiv_aspect                                                   = FIV Aspekte
+project.form.label.fiv_country                                                  = FIV Regionalklassifikation
 project.form.label.fiv_subject                                                  = FIV Themen
 project.help.fiv_aspect                                                         = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
+project.help.fiv_country                                                        = Regionalklassifikation des FIV
 project.help.fiv_subject                                                        = Schlagwortvergabe nach dem Thesaurus des FIV 
 project.simple.title                                                            = Einfache Suche
 editor.search.mir.language_classification                                       = Sprache
@@ -18,5 +20,6 @@ editor.search.mir.pressarchive_classification.tooltip                           
 editor.search.mir.press_organ                                                   = Presseorgan
 editor.search.mir.press_organ.tooltip                                           = Liste der Presseorgane
 component.mods.metaData.dictionary.FIVAspect                                    = FIV-Aspekte
+component.mods.metaData.dictionary.FIVCountry                                   = FIV-Notation 
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
 
