DFI-38_Klassifikation FIV-Sachklassifikation anlegen

--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -8,8 +8,10 @@ project.complex.title                                                           
 project.form.label.fiv_aspect                                                   = FIV Aspekte
 project.form.label.fiv_country                                                  = FIV Regionalklassifikation
 project.form.label.fiv_subject                                                  = FIV Themen
+project.form.label.fiv_subjectclassification                                    = FIV Sachklassifikation
 project.help.fiv_aspect                                                         = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
 project.help.fiv_country                                                        = Regionalklassifikation des FIV
+project.help.fiv_subjectclassification                                          = Sachklassifikation des FIV
 project.help.fiv_subject                                                        = Schlagwortvergabe nach dem Thesaurus des FIV 
 project.simple.title                                                            = Einfache Suche
 editor.search.mir.language_classification                                       = Sprache
@@ -22,4 +24,5 @@ editor.search.mir.press_organ.tooltip                                           
 component.mods.metaData.dictionary.FIVAspect                                    = FIV-Aspekte
 component.mods.metaData.dictionary.FIVCountry                                   = FIV-Notation 
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
+component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
 
