DFI-39_Klassifikation FIV-Sonstige anlegen

--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -5,10 +5,12 @@ project.layout.footer.technical                                                 
 project.layout.footer.contact                                                   = Kontakt
 browse.documents                                                                = Dokumente
 project.complex.title                                                           = Erweiterte Suche
+project.form.label.fiv_addsubject                                               = FIV Sonstige Notation
 project.form.label.fiv_aspect                                                   = FIV Aspekte
 project.form.label.fiv_country                                                  = FIV Regionalklassifikation
 project.form.label.fiv_subject                                                  = FIV Themen
 project.form.label.fiv_subjectclassification                                    = FIV Sachklassifikation
+project.help.fiv_addsubject                                                     = Sonstige Notation des FIV
 project.help.fiv_aspect                                                         = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
 project.help.fiv_country                                                        = Regionalklassifikation des FIV
 project.help.fiv_subjectclassification                                          = Sachklassifikation des FIV
@@ -21,6 +23,7 @@ editor.search.mir.pressarchive_classification                                   
 editor.search.mir.pressarchive_classification.tooltip                           = Klassifikation des dfi-Pressearchivs
 editor.search.mir.press_organ                                                   = Presseorgan
 editor.search.mir.press_organ.tooltip                                           = Liste der Presseorgane
+component.mods.metaData.dictionary.FIVAddSubject                                = FIV-Notation
 component.mods.metaData.dictionary.FIVAspect                                    = FIV-Aspekte
 component.mods.metaData.dictionary.FIVCountry                                   = FIV-Notation 
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
