DFI-8 transformed all dfi strings to lower case

--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -19,7 +19,7 @@ project.simple.title                                                            
 editor.search.mir.language_classification                                       = Sprache
 editor.search.mir.language_classification.tooltip                               = Dokumente in einer bestimmten Spache suchen.
 editor.search.mir.genre                                                         = Dokumenttyp
-editor.search.mir.pressarchive_classification                                   = Dfi-Pressearchiv
+editor.search.mir.pressarchive_classification                                   = dfi-Pressearchiv
 editor.search.mir.pressarchive_classification.tooltip                           = Klassifikation des dfi-Pressearchivs
 editor.search.mir.press_organ                                                   = Presseorgan
 editor.search.mir.press_organ.tooltip                                           = Liste der Presseorgane
