--- a/src/main/resources/config/reposis_dfi/messages_en.properties
+++ b/src/main/resources/config/reposis_dfi/messages_en.properties
@@ -9,8 +9,8 @@ project.simple.title                                                            
 editor.search.mir.language_classification                                       = Language
 editor.search.mir.language_classification.tooltip                               = Search documents in a specific language.
 editor.search.mir.genre                                                         = Document Type
-editor.search.mir.pressarchive_classification                                   = Dfi Press Archive
-editor.search.mir.pressarchive_classification.tooltip                           = Classification of the Dfi press archive
+editor.search.mir.pressarchive_classification                                   = dfi Press Archive
+editor.search.mir.pressarchive_classification.tooltip                           = Classification of the dfi press archive
 editor.search.mir.press_organ                                                   = Press organ
 editor.search.mir.press_organ.tooltip                                           = List of press organs
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Subject
