DFI-8 adds more translations to the project

--- a/src/main/resources/config/reposis_dfi/messages_en.properties
+++ b/src/main/resources/config/reposis_dfi/messages_en.properties
@@ -1,8 +1,10 @@
+project.layout.header.quick_search                                              = quick search
 project.layout.footer.about                                                     = About us
 project.layout.footer.rights                                                    = Legal
 project.layout.footer.service                                                   = A service of
 project.layout.footer.technical                                                 = Technical
 project.layout.footer.contact                                                   = Contact
+project.layout.footer.copyright                                                 = \u00a9 Deutsch-Franz\u00f6sisches Institut
 browse.documents                                                                = Documents
 project.complex.title                                                           = Advanced Search
 project.simple.title                                                            = Simple Search
