--- a/src/main/resources/config/reposis_dfi/messages_fr.properties
+++ b/src/main/resources/config/reposis_dfi/messages_fr.properties
@@ -1,10 +1,10 @@
-project.layout.header.quick_search                                              = Schnellsuche
+project.layout.header.quick_search                                              = Recherche rapide
 project.layout.footer.about                                                     = \u00DCber uns
 project.layout.footer.rights                                                    = Rechtliches
 project.layout.footer.service                                                   = Ein Dienst der
 project.layout.footer.technical                                                 = Technisches
 project.layout.footer.contact                                                   = Kontakt
-project.layout.footer.copyright                                                 = \u00a9 Deutsch-Franz\u00f6sisches Institut
+project.layout.footer.copyright                                                 = \u00a9 Institut Franco-Allemand
 browse.documents                                                                = Dokumente
 project.complex.title                                                           = Erweiterte Suche
 project.form.label.fiv_addsubject                                               = FIV Sonstige Notation
@@ -30,3 +30,5 @@ component.mods.metaData.dictionary.FIVAspect                                    
 component.mods.metaData.dictionary.FIVCountry                                   = FIV-Notation
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
 component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
+
+mir.navsearch.placeholder                                                       = Recherche
