--- a/src/main/resources/config/reposis_dfi/messages_en.properties
+++ b/src/main/resources/config/reposis_dfi/messages_en.properties
@@ -1,16 +1,18 @@
+project.layout.header.quick_search                                              = quick search
 project.layout.footer.about                                                     = About us
 project.layout.footer.rights                                                    = Legal
 project.layout.footer.service                                                   = A service of
 project.layout.footer.technical                                                 = Technical
 project.layout.footer.contact                                                   = Contact
+project.layout.footer.copyright                                                 = \u00a9 Deutsch-Franz\u00f6sisches Institut
 browse.documents                                                                = Documents
 project.complex.title                                                           = Advanced Search
 project.simple.title                                                            = Simple Search
 editor.search.mir.language_classification                                       = Language
 editor.search.mir.language_classification.tooltip                               = Search documents in a specific language.
 editor.search.mir.genre                                                         = Document Type
-editor.search.mir.pressarchive_classification                                   = Dfi Press Archive
-editor.search.mir.pressarchive_classification.tooltip                           = Classification of the Dfi press archive
+editor.search.mir.pressarchive_classification                                   = dfi Press Archive
+editor.search.mir.pressarchive_classification.tooltip                           = Classification of the dfi press archive
 editor.search.mir.press_organ                                                   = Press organ
 editor.search.mir.press_organ.tooltip                                           = List of press organs
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Subject
