i180n for FIV classifications

--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -6,6 +6,9 @@ project.layout.footer.technical                                                 
 project.layout.footer.contact                                                   = Kontakt
 project.layout.footer.copyright                                                 = \u00a9 Deutsch-Franz\u00f6sisches Institut
 browse.documents                                                                = Dokumente
+browse.fivr                                                                     = FIV Regionalklassifikation
+browse.fivs                                                                     = FIV Sachklassifikation
+browse.fivdiv                                                                   = DFI Sachklassifikation
 project.complex.title                                                           = Erweiterte Suche
 project.form.label.fiv_addsubject                                               = FIV Sonstige Notation
 project.form.label.fiv_aspect                                                   = FIV Aspekte
