--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -8,7 +8,7 @@ project.layout.footer.copyright                                                 
 browse.documents                                                                = Dokumente
 browse.fivr                                                                     = FIV Regionalklassifikation
 browse.fivs                                                                     = FIV Sachklassifikation
-browse.fivdiv                                                                   = DFI Sachklassifikation
+browse.fivdfi                                                                   = DFI Sachklassifikation
 project.complex.title                                                           = Erweiterte Suche
 project.form.label.fiv_addsubject                                               = FIV Sonstige Notation
 project.form.label.fiv_aspect                                                   = FIV Aspekte
