DFI-49 add some i18n

--- a/src/main/resources/config/reposis_dfi/messages_fr.properties
+++ b/src/main/resources/config/reposis_dfi/messages_fr.properties
@@ -19,7 +19,7 @@ project.help.fiv_subjectclassification                                          
 project.help.fiv_subject                                                        = Schlagwortvergabe nach dem Thesaurus des FIV
 project.simple.title                                                            = Einfache Suche
 editor.search.mir.language_classification                                       = Sprache
-editor.search.mir.language_classification.tooltip                               = Dokumente in einer bestimmten Spache suchen.
+editor.search.mir.language_classification.tooltip                               = Dokumente in einer bestimmten Sprache suchen.
 editor.search.mir.genre                                                         = Dokumenttyp
 editor.search.mir.pressarchive_classification                                   = dfi-Pressearchiv
 editor.search.mir.pressarchive_classification.tooltip                           = Klassifikation des dfi-Pressearchivs
@@ -32,3 +32,4 @@ component.mods.metaData.dictionary.FIVSubject                                   
 component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
 
 mir.navsearch.placeholder                                                       = Recherche
+basket.open                                                                     = Ouvrir la liste de souhaits
