DFI-49 add some i18n

--- a/src/main/resources/config/reposis_dfi/messages_fr.properties
+++ b/src/main/resources/config/reposis_dfi/messages_fr.properties
@@ -32,4 +32,10 @@ component.mods.metaData.dictionary.FIVSubject                                   
 component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
 
 mir.navsearch.placeholder                                                       = Recherche
+mir.state.blocked                                                               = Verrouill\u00E9
+mir.state.deleted                                                               = Supprim\u00E9
+mir.state.imported                                                              = Import\u00E9
+mir.state.new                                                                   = Cr\u00E9\u00E9
+mir.state.published                                                             = Publi\u00E9
+mir.state.review                                                                = En cours de traitement
 basket.open                                                                     = Ouvrir la liste de souhaits
