--- a/src/main/resources/config/reposis_dfi/messages_fr.properties
+++ b/src/main/resources/config/reposis_dfi/messages_fr.properties
@@ -1,3 +1,7 @@
+browse.documents                                                                = Dokumente
+browse.fivr                                                                     = Classification régionale FIV
+browse.fivs                                                                     = FIV Sachklassifikation
+browse.fivdfi                                                                   = DFI Sachklassifikation
 project.layout.header.quick_search                                              = Recherche rapide
 project.layout.footer.about                                                     = \u00DCber uns
 project.layout.footer.rights                                                    = Rechtliches
