DFI-54 workflow modul aktivieren

--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -4,7 +4,7 @@ project.layout.footer.rights                                                    
 project.layout.footer.service                                                   = Ein Dienst der
 project.layout.footer.technical                                                 = Technisches
 project.layout.footer.contact                                                   = Kontakt
-project.layout.footer.copyright                                                 = \u00a9 Deutsch-Franz\u00f6sisches Institut
+project.layout.footer.copyright                                                 = \u00A9 Deutsch-Franz\u00F6sisches Institut
 browse.documents                                                                = Dokumente
 browse.fivr                                                                     = FIV Regionalklassifikation
 browse.fivs                                                                     = FIV Sachklassifikation
@@ -33,3 +33,5 @@ component.mods.metaData.dictionary.FIVAspect                                    
 component.mods.metaData.dictionary.FIVCountry                                   = FIV-Notation
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
 component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
+mir.workflow.state.published2imported                                           = Status auf "Importiert" setzen
+mir.workflow.state.imported2published                                           = Status auf "Ver\u00F6ffentlicht" setzen
