--- a/src/main/resources/config/reposis_dfi/messages_en.properties
+++ b/src/main/resources/config/reposis_dfi/messages_en.properties
@@ -4,7 +4,7 @@ project.layout.footer.rights                                                    
 project.layout.footer.service                                                   = A service of
 project.layout.footer.technical                                                 = Technical
 project.layout.footer.contact                                                   = Contact
-project.layout.footer.copyright                                                 = \u00a9 Deutsch-Franz\u00f6sisches Institut
+project.layout.footer.copyright                                                 = \u00A9 Deutsch-Franz\u00F6sisches Institut
 browse.documents                                                                = Documents
 project.complex.title                                                           = Advanced Search
 project.simple.title                                                            = Simple Search
@@ -16,3 +16,5 @@ editor.search.mir.pressarchive_classification.tooltip                           
 editor.search.mir.press_organ                                                   = Press organ
 editor.search.mir.press_organ.tooltip                                           = List of press organs
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Subject
+mir.workflow.state.published2imported                                           = Set status to "Imported"
+mir.workflow.state.imported2published                                           = Set status to "Published"
