--- a/src/main/resources/config/reposis_dfi/messages_fr.properties
+++ b/src/main/resources/config/reposis_dfi/messages_fr.properties
@@ -1,5 +1,5 @@
 browse.documents                                                                = Dokumente
-browse.fivr                                                                     = Classification régionale FIV
+browse.fivr                                                                     = Classification r\u00E9gionale FIV
 browse.fivs                                                                     = FIV Sachklassifikation
 browse.fivdfi                                                                   = DFI Sachklassifikation
 project.layout.header.quick_search                                              = Recherche rapide
@@ -8,7 +8,7 @@ project.layout.footer.rights                                                    
 project.layout.footer.service                                                   = Ein Dienst der
 project.layout.footer.technical                                                 = Technisches
 project.layout.footer.contact                                                   = Kontakt
-project.layout.footer.copyright                                                 = \u00a9 Institut Franco-Allemand
+project.layout.footer.copyright                                                 = \u00A9 Institut Franco-Allemand
 browse.documents                                                                = Dokumente
 project.complex.title                                                           = Erweiterte Suche
 project.form.label.fiv_addsubject                                               = FIV Sonstige Notation
@@ -43,3 +43,5 @@ mir.state.new                                                                   
 mir.state.published                                                             = Publi\u00E9
 mir.state.review                                                                = En cours de traitement
 basket.open                                                                     = Ouvrir la liste de souhaits
+mir.workflow.state.published2imported                                           = D\u00E9finissez l'\u00E9tat sur "Import\u00E9"
+mir.workflow.state.imported2published                                           = D\u00E9finissez l'\u00E9tat sur "Publi\u00E9"
