--- a/src/main/resources/config/reposis_dfi/messages_fr.properties
+++ b/src/main/resources/config/reposis_dfi/messages_fr.properties
@@ -36,6 +36,8 @@ component.mods.metaData.dictionary.FIVSubject                                   
 component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
 
 mir.navsearch.placeholder                                                       = Recherche
+mir.response.facet.date.dateIssued.title                                        = Date de sortie		
+mir.response.facet.rfc5646.title                                                = Langue
 mir.state.blocked                                                               = Verrouill\u00E9
 mir.state.deleted                                                               = Supprim\u00E9
 mir.state.imported                                                              = Import\u00E9
