--- a/src/main/resources/config/reposis_dfi/messages_en.properties
+++ b/src/main/resources/config/reposis_dfi/messages_en.properties
@@ -16,5 +16,7 @@ editor.search.mir.pressarchive_classification.tooltip                           
 editor.search.mir.press_organ                                                   = Press organ
 editor.search.mir.press_organ.tooltip                                           = List of press organs
 component.mods.metaData.dictionary.FIVSubject                                   = FIV-Subject
+mir.response.facet.date.dateIssued.title                                        = Date Issued		
+mir.response.facet.rfc5646.title                                                = Language
 mir.workflow.state.published2imported                                           = Set status to "Imported"
 mir.workflow.state.imported2published                                           = Set status to "Published"
