DFI-58 add search option for no or closed access files

--- a/src/main/resources/config/reposis_dfi/messages_de.properties
+++ b/src/main/resources/config/reposis_dfi/messages_de.properties
@@ -1,39 +1,45 @@
-project.layout.header.quick_search                                              = Schnellsuche
-project.layout.footer.about                                                     = \u00DCber uns
-project.layout.footer.rights                                                    = Rechtliches
-project.layout.footer.service                                                   = Ein Dienst der
-project.layout.footer.technical                                                 = Technisches
-project.layout.footer.contact                                                   = Kontakt
-project.layout.footer.copyright                                                 = \u00A9 Deutsch-Franz\u00F6sisches Institut
-browse.documents                                                                = Dokumente
-browse.fivr                                                                     = FIV Regionalklassifikation
-browse.fivs                                                                     = FIV Sachklassifikation
-browse.fivdfi                                                                   = DFI Sachklassifikation
-project.complex.title                                                           = Erweiterte Suche
-project.form.label.fiv_addsubject                                               = FIV Sonstige Notation
-project.form.label.fiv_aspect                                                   = FIV Aspekte
-project.form.label.fiv_country                                                  = FIV Regionalklassifikation
-project.form.label.fiv_subject                                                  = FIV Themen
-project.form.label.fiv_subjectclassification                                    = FIV Sachklassifikation
-project.help.fiv_addsubject                                                     = Sonstige Notation des FIV
-project.help.fiv_aspect                                                         = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
-project.help.fiv_country                                                        = Regionalklassifikation des FIV
-project.help.fiv_subjectclassification                                          = Sachklassifikation des FIV
-project.help.fiv_subject                                                        = Schlagwortvergabe nach dem Thesaurus des FIV
-project.simple.title                                                            = Einfache Suche
-editor.search.mir.language_classification                                       = Sprache
-editor.search.mir.language_classification.tooltip                               = Dokumente in einer bestimmten Spache suchen.
-editor.search.mir.genre                                                         = Dokumenttyp
-editor.search.mir.pressarchive_classification                                   = dfi-Pressearchiv
-editor.search.mir.pressarchive_classification.tooltip                           = Klassifikation des dfi-Pressearchivs
-editor.search.mir.press_organ                                                   = Presseorgan
-editor.search.mir.press_organ.tooltip                                           = Liste der Presseorgane
-component.mods.metaData.dictionary.FIVAddSubject                                = FIV-Notation
-component.mods.metaData.dictionary.FIVAspect                                    = FIV-Aspekte
-component.mods.metaData.dictionary.FIVCountry                                   = FIV-Notation
-component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
-component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
-mir.response.facet.date.dateIssued.title                                        = Veröffentlichungsdatum
-mir.response.facet.rfc5646.title                                                = Sprache
-mir.workflow.state.published2imported                                           = Status auf "Importiert" setzen
-mir.workflow.state.imported2published                                           = Status auf "Ver\u00F6ffentlicht" setzen
+
+browse.documents = Dokumente
+browse.fivdfi    = DFI Sachklassifikation
+browse.fivr      = FIV Regionalklassifikation
+browse.fivs      = FIV Sachklassifikation
+
+component.mods.metaData.dictionary.FIVAddSubject            = FIV-Notation
+component.mods.metaData.dictionary.FIVAspect                = FIV-Aspekte
+component.mods.metaData.dictionary.FIVCountry               = FIV-Notation
+component.mods.metaData.dictionary.FIVSubject               = FIV-Themen
+component.mods.metaData.dictionary.FIVSubjectClassification = FIV-Notation
+
+editor.search.mir.genre                               = Dokumenttyp
+editor.search.mir.language_classification             = Sprache
+editor.search.mir.language_classification.tooltip     = Dokumente in einer bestimmten Spache suchen.
+editor.search.mir.noFreeAccess                        = keine oder gesch\u00FCtzte Dateien
+editor.search.mir.press_organ                         = Presseorgan
+editor.search.mir.press_organ.tooltip                 = Liste der Presseorgane
+editor.search.mir.pressarchive_classification         = dfi-Pressearchiv
+editor.search.mir.pressarchive_classification.tooltip = Klassifikation des dfi-Pressearchivs
+
+mir.response.facet.date.dateIssued.title = Ver\u00F6ffentlichungsdatum
+mir.response.facet.rfc5646.title         = Sprache
+mir.workflow.state.imported2published    = Status auf "Ver\u00F6ffentlicht" setzen
+mir.workflow.state.published2imported    = Status auf "Importiert" setzen
+
+project.complex.title                        = Erweiterte Suche
+project.form.label.fiv_addsubject            = FIV Sonstige Notation
+project.form.label.fiv_aspect                = FIV Aspekte
+project.form.label.fiv_country               = FIV Regionalklassifikation
+project.form.label.fiv_subject               = FIV Themen
+project.form.label.fiv_subjectclassification = FIV Sachklassifikation
+project.help.fiv_addsubject                  = Sonstige Notation des FIV
+project.help.fiv_aspect                      = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
+project.help.fiv_country                     = Regionalklassifikation des FIV
+project.help.fiv_subject                     = Schlagwortvergabe nach dem Thesaurus des FIV
+project.help.fiv_subjectclassification       = Sachklassifikation des FIV
+project.layout.footer.about                  = \u00DCber uns
+project.layout.footer.contact                = Kontakt
+project.layout.footer.copyright              = \u00A9 Deutsch-Franz\u00F6sisches Institut
+project.layout.footer.rights                 = Rechtliches
+project.layout.footer.service                = Ein Dienst der
+project.layout.footer.technical              = Technisches
+project.layout.header.quick_search           = Schnellsuche
+project.simple.title                         = Einfache Suche
