--- a/src/main/resources/config/reposis_dfi/messages_en.properties
+++ b/src/main/resources/config/reposis_dfi/messages_en.properties
@@ -1,22 +1,28 @@
-project.layout.header.quick_search                                              = quick search
-project.layout.footer.about                                                     = About us
-project.layout.footer.rights                                                    = Legal
-project.layout.footer.service                                                   = A service of
-project.layout.footer.technical                                                 = Technical
-project.layout.footer.contact                                                   = Contact
-project.layout.footer.copyright                                                 = \u00A9 Deutsch-Franz\u00F6sisches Institut
-browse.documents                                                                = Documents
-project.complex.title                                                           = Advanced Search
-project.simple.title                                                            = Simple Search
-editor.search.mir.language_classification                                       = Language
-editor.search.mir.language_classification.tooltip                               = Search documents in a specific language.
-editor.search.mir.genre                                                         = Document Type
-editor.search.mir.pressarchive_classification                                   = dfi Press Archive
-editor.search.mir.pressarchive_classification.tooltip                           = Classification of the dfi press archive
-editor.search.mir.press_organ                                                   = Press organ
-editor.search.mir.press_organ.tooltip                                           = List of press organs
-component.mods.metaData.dictionary.FIVSubject                                   = FIV-Subject
-mir.response.facet.date.dateIssued.title                                        = Date Issued		
-mir.response.facet.rfc5646.title                                                = Language
-mir.workflow.state.published2imported                                           = Set status to "Imported"
-mir.workflow.state.imported2published                                           = Set status to "Published"
+
+browse.documents = Documents
+
+component.mods.metaData.dictionary.FIVSubject = FIV-Subject
+
+editor.search.mir.genre                               = Document Type
+editor.search.mir.language_classification             = Language
+editor.search.mir.language_classification.tooltip     = Search documents in a specific language.
+editor.search.mir.noFreeAccess                        = no or protected files
+editor.search.mir.press_organ                         = Press organ
+editor.search.mir.press_organ.tooltip                 = List of press organs
+editor.search.mir.pressarchive_classification         = dfi Press Archive
+editor.search.mir.pressarchive_classification.tooltip = Classification of the dfi press archive
+
+mir.response.facet.date.dateIssued.title = Date Issued\u0009\u0009
+mir.response.facet.rfc5646.title         = Language
+mir.workflow.state.imported2published    = Set status to "Published"
+mir.workflow.state.published2imported    = Set status to "Imported"
+
+project.complex.title              = Advanced Search
+project.layout.footer.about        = About us
+project.layout.footer.contact      = Contact
+project.layout.footer.copyright    = \u00A9 Deutsch-Franz\u00F6sisches Institut
+project.layout.footer.rights       = Legal
+project.layout.footer.service      = A service of
+project.layout.footer.technical    = Technical
+project.layout.header.quick_search = quick search
+project.simple.title               = Simple Search
