--- a/src/main/resources/config/reposis_dfi/messages_fr.properties
+++ b/src/main/resources/config/reposis_dfi/messages_fr.properties
@@ -1,49 +1,54 @@
-browse.documents                                                                = Dokumente
-browse.fivr                                                                     = Classification r\u00E9gionale FIV
-browse.fivs                                                                     = FIV Sachklassifikation
-browse.fivdfi                                                                   = DFI Sachklassifikation
-project.layout.header.quick_search                                              = Recherche rapide
-project.layout.footer.about                                                     = \u00DCber uns
-project.layout.footer.rights                                                    = Rechtliches
-project.layout.footer.service                                                   = Ein Dienst der
-project.layout.footer.technical                                                 = Technisches
-project.layout.footer.contact                                                   = Kontakt
-project.layout.footer.copyright                                                 = \u00A9 Institut Franco-Allemand
-browse.documents                                                                = Dokumente
-project.complex.title                                                           = Erweiterte Suche
-project.form.label.fiv_addsubject                                               = FIV Sonstige Notation
-project.form.label.fiv_aspect                                                   = FIV Aspekte
-project.form.label.fiv_country                                                  = FIV Regionalklassifikation
-project.form.label.fiv_subject                                                  = FIV Themen
-project.form.label.fiv_subjectclassification                                    = FIV Sachklassifikation
-project.help.fiv_addsubject                                                     = Sonstige Notation des FIV
-project.help.fiv_aspect                                                         = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
-project.help.fiv_country                                                        = Regionalklassifikation des FIV
-project.help.fiv_subjectclassification                                          = Sachklassifikation des FIV
-project.help.fiv_subject                                                        = Schlagwortvergabe nach dem Thesaurus des FIV
-project.simple.title                                                            = Einfache Suche
-editor.search.mir.language_classification                                       = Sprache
-editor.search.mir.language_classification.tooltip                               = Dokumente in einer bestimmten Sprache suchen.
-editor.search.mir.genre                                                         = Dokumenttyp
-editor.search.mir.pressarchive_classification                                   = dfi-Pressearchiv
-editor.search.mir.pressarchive_classification.tooltip                           = Klassifikation des dfi-Pressearchivs
-editor.search.mir.press_organ                                                   = Presseorgan
-editor.search.mir.press_organ.tooltip                                           = Liste der Presseorgane
-component.mods.metaData.dictionary.FIVAddSubject                                = FIV-Notation
-component.mods.metaData.dictionary.FIVAspect                                    = FIV-Aspekte
-component.mods.metaData.dictionary.FIVCountry                                   = FIV-Notation
-component.mods.metaData.dictionary.FIVSubject                                   = FIV-Themen
-component.mods.metaData.dictionary.FIVSubjectClassification                     = FIV-Notation
 
-mir.navsearch.placeholder                                                       = Recherche
-mir.response.facet.date.dateIssued.title                                        = Date de sortie		
-mir.response.facet.rfc5646.title                                                = Langue
-mir.state.blocked                                                               = Verrouill\u00E9
-mir.state.deleted                                                               = Supprim\u00E9
-mir.state.imported                                                              = Import\u00E9
-mir.state.new                                                                   = Cr\u00E9\u00E9
-mir.state.published                                                             = Publi\u00E9
-mir.state.review                                                                = En cours de traitement
-basket.open                                                                     = Ouvrir la liste de souhaits
-mir.workflow.state.published2imported                                           = D\u00E9finissez l'\u00E9tat sur "Import\u00E9"
-mir.workflow.state.imported2published                                           = D\u00E9finissez l'\u00E9tat sur "Publi\u00E9"
+basket.open = Ouvrir la liste de souhaits
+
+browse.documents = Dokumente
+browse.fivdfi    = DFI Sachklassifikation
+browse.fivr      = Classification r\u00E9gionale FIV
+browse.fivs      = FIV Sachklassifikation
+
+component.mods.metaData.dictionary.FIVAddSubject            = FIV-Notation
+component.mods.metaData.dictionary.FIVAspect                = FIV-Aspekte
+component.mods.metaData.dictionary.FIVCountry               = FIV-Notation
+component.mods.metaData.dictionary.FIVSubject               = FIV-Themen
+component.mods.metaData.dictionary.FIVSubjectClassification = FIV-Notation
+
+editor.search.mir.genre                               = Dokumenttyp
+editor.search.mir.language_classification             = Sprache
+editor.search.mir.language_classification.tooltip     = Dokumente in einer bestimmten Sprache suchen.
+editor.search.mir.noFreeAccess                        = aucun fichier ou des fichiers prot\u00E9g\u00E9s
+editor.search.mir.press_organ                         = Presseorgan
+editor.search.mir.press_organ.tooltip                 = Liste der Presseorgane
+editor.search.mir.pressarchive_classification         = dfi-Pressearchiv
+editor.search.mir.pressarchive_classification.tooltip = Klassifikation des dfi-Pressearchivs
+
+mir.navsearch.placeholder                = Recherche
+mir.response.facet.date.dateIssued.title = Date de sortie\u0009\u0009
+mir.response.facet.rfc5646.title         = Langue
+mir.state.blocked                        = Verrouill\u00E9
+mir.state.deleted                        = Supprim\u00E9
+mir.state.imported                       = Import\u00E9
+mir.state.new                            = Cr\u00E9\u00E9
+mir.state.published                      = Publi\u00E9
+mir.state.review                         = En cours de traitement
+mir.workflow.state.imported2published    = D\u00E9finissez l'\u00E9tat sur "Publi\u00E9"
+mir.workflow.state.published2imported    = D\u00E9finissez l'\u00E9tat sur "Import\u00E9"
+
+project.complex.title                        = Erweiterte Suche
+project.form.label.fiv_addsubject            = FIV Sonstige Notation
+project.form.label.fiv_aspect                = FIV Aspekte
+project.form.label.fiv_country               = FIV Regionalklassifikation
+project.form.label.fiv_subject               = FIV Themen
+project.form.label.fiv_subjectclassification = FIV Sachklassifikation
+project.help.fiv_addsubject                  = Sonstige Notation des FIV
+project.help.fiv_aspect                      = Schlagwortvergabe (Aspekte) nach dem Thesaurus des FIV
+project.help.fiv_country                     = Regionalklassifikation des FIV
+project.help.fiv_subject                     = Schlagwortvergabe nach dem Thesaurus des FIV
+project.help.fiv_subjectclassification       = Sachklassifikation des FIV
+project.layout.footer.about                  = \u00DCber uns
+project.layout.footer.contact                = Kontakt
+project.layout.footer.copyright              = \u00A9 Institut Franco-Allemand
+project.layout.footer.rights                 = Rechtliches
+project.layout.footer.service                = Ein Dienst der
+project.layout.footer.technical              = Technisches
+project.layout.header.quick_search           = Recherche rapide
+project.simple.title                         = Einfache Suche
